<resources>
    <string name="about">关于</string>
    <string name="already_deleted_folder_s">已经删除目录 %1$s</string>
    <string name="already_moved_d_files">已成功移动 %1$d 个文件</string>
    <string name="already_removed_d_files">已经删除 %1$d 个文件</string>
    <string name="already_rename_folder">已经重命名文件夹</string>
    <string name="app_name">PicGo</string>
    <string name="can_move_all_files">可以移动所有 %1$d 个文件</string>
    <string name="cancel">取消</string>
    <string name="cannot_get_image_for_position">不能获取第 %1$d 项的图片</string>
    <string name="capture_time">时间：</string>
    <string name="close">关闭</string>
    <string name="confirm">确认</string>
    <string name="confirm_to_remove_files_in_folder_s">确认删除目录“%1$s”中选中的 %2$d 张图片吗？</string>
    <string name="confirm_to_remove_folder_s">确认删除文件夹 “%1$s” ？</string>
    <string name="conflict_d">重名 | %1$d</string>
    <string name="copy">复制</string>
    <string name="copy_d_files_to">复制 “%1$d张图片” 至</string>
    <string name="create_folder">新建文件夹</string>
    <string name="create_folder_failed">新建文件夹失败</string>
    <string name="created_folder_s">新建文件夹 “%1$s” 成功</string>
    <string name="current_month">本月</string>
    <string name="current_week">本周</string>
    <string name="delete">删除</string>
    <string name="delete_all_files">删除所有文件</string>
    <string name="delete_item_failed">删除项目失败</string>
    <string name="detect_move_file_action_result_failed">检测文件移动操作失败</string>
    <string name="detecting_move_file_operationg_result">正在检测文件移动结果…</string>
    <string name="dialog_title">对话框标题</string>
    <string name="directory_is_not_empty">目录不为空</string>
    <string name="directory_s_is_not_empty__continue_will_delete_all_d_files_in_the_directory">目录 %1$s 不为空，继续将删除目录中的 %2$d 个文件？</string>
    <string name="display_keyboard">显示键盘</string>
    <string name="drawer_close">关闭</string>
    <string name="drawer_open">打开</string>
    <string name="exclude_folder">排除文件夹</string>
    <string name="exclude_folder_dialog_content_description">点击 [删除按钮] 从列表中删除目录。</string>
    <string name="exclude_folder_failed">排序目录失败</string>
    <string name="exclude_folders">排除目录</string>
    <string name="failed_to_load_preference">加载偏好设置失败</string>
    <string name="file_name_conflict">文件名冲突</string>
    <string name="file_name_conflict_resolver">文件名冲突解决</string>
    <string name="file_path">文件路径</string>
    <string name="file_path_">文件路径：</string>
    <string name="file_type_lable_gif">GIF</string>
    <string name="fmt_main_image_selected_title">%1$s(%2$d/%3$d)</string>
    <string name="folder_detail">文件夹详细信息</string>
    <string name="folder_name_has_no_changes">文件夹名称没变化</string>
    <string name="folder_rename">文件夹重命名</string>
    <string name="force_to_delete_folder_s_failed">强制删除目录 %1$s 失败</string>
    <string name="gallery">相册</string>
    <string name="grid_view">网格视图</string>
    <string name="hidden_folders">隐藏目录</string>
    <string name="hide_keyboard">隐藏键盘</string>
    <string name="image_item">Image Item</string>
    <string name="image_list_empty_view_desc">Nothing,nothing,nothing!</string>
    <string name="image_size_">大小：</string>
    <string name="image_size_d_d">%1$d × %2$d</string>
    <string name="image_size_d_d_compact">%1$d×%2$d</string>
    <string name="input_new_directory_name">输入新文件夹名称</string>
    <string name="input_new_folder_name">输入新建文件夹名称</string>
    <string name="keep_all_source_files">保留所有源文件</string>
    <string name="keep_all_target_files">保留所有目标文件</string>
    <string name="keep_both">全部保留</string>
    <string name="last_month">上个月</string>
    <string name="last_week">上周</string>
    <string name="list_view">列表视图</string>
    <string name="load_failed">加载失败</string>
    <string name="load_folder_list_failed">加载文件夹列表失败</string>
    <string name="load_image_failed">加载图片失败</string>
    <string name="loading_contacts">正在加载联系人</string>
    <string name="main_drawer_menu_item_move__item__to__folder">移动“%1$s”中的 %2$d 个文件到当前文件夹</string>
    <string name="mode_default">默认</string>
    <string name="move">移动</string>
    <string name="move_d_files_to">移动 “%1$d张图片” 至</string>
    <string name="move_file">移动文件</string>
    <string name="move_file_d_">移动文件(%1$d)</string>
    <string name="move_file_d_d">移动文件(%1$d/%2$d)</string>
    <string name="move_file_to">移动文件至</string>
    <string name="move_files_failed">移动文件失败</string>
    <string name="move_files_successfully_but_">移动文件成功，部分文件移动失败</string>
    <string name="move_folder_s"> 移动“%1$s”至</string>
    <string name="move_selected_files_to">移动选中图片至</string>
    <string name="move_selected_images_to_directory_s">移动选中图片至目录：%1$s</string>
    <string name="move_selected_images_to_here">将选中图片移动至这里</string>
    <string name="new_folder_in_s">\'%1$s\' 中的新文件夹</string>
    <string name="new_folder_prefill">新建文件夹</string>
    <string name="no_match_search_result">无相关搜索结果</string>
    <string name="operation_failed">操作失败</string>
    <string name="option">选项</string>
    <string name="order_by_asc">升序↑</string>
    <string name="order_by_desc">降序↓</string>
    <string name="paste">粘贴</string>
    <string name="percent_d_d">%1$d/%2$d</string>
    <string name="picture">照片</string>
    <string name="pref_title_other">其他</string>
    <string name="recent_history">最近浏览</string>
    <string name="remove_d_files">删除 “%1$d张图片”</string>
    <string name="remove_d_files_success_with_d_files_failed_with_d_files">请求移除 %1$d 个文件，成功 %2$d 个，失败 %3$d 个。</string>
    <string name="remove_file_failed">删除文件失败</string>
    <string name="remove_files">移除文件</string>
    <string name="remove_folder">删除文件夹</string>
    <string name="remove_folder_failed">删除文件夹失败</string>
    <string name="remove_folder_s"> 删除“%1$s”</string>
    <string name="rename">重命名</string>
    <string name="rename_folder_s">重命名“%1$s”为</string>
    <string name="request_failed">请求失败</string>
    <string name="resolution_">尺寸：</string>
    <string name="resolve">解决</string>
    <string name="sdcard_dcim">DCIM</string>
    <string name="sdcard_pictures">Pictures</string>
    <string name="search">搜索</string>
    <string name="select_a_target_folder">选择目标目录</string>
    <string name="select_all">全选</string>
    <string name="selected_files_operation">选中文件操作</string>
    <string name="setting">设置</string>
    <string name="show_exclude_folder">显示排除目录</string>
    <string name="sort_by_date">按日期排序</string>
    <string name="sort_by_name">按名称排序</string>
    <string name="source_folder">源目录</string>
    <string name="source_folder_d">源目录 | %1$d</string>
    <string name="t9_keyboard_input_prompt">输入号码</string>
    <string name="target_directory_exists__d_files_in_the_same_name">目录 %1$s 存在 %2$d 个同名文件</string>
    <string name="title">标题</string>
    <string name="today">今天</string>
    <string name="tools_file_path">/storage/0/SDCard/DCIM/Fuck/it/all.jpg</string>
    <string name="tools_image_file_size">8.12 MB</string>
    <string name="tools_image_resolution">1080×1920</string>
    <string name="tools_image_size">1920×1080</string>
    <string name="unimplemented">未实现</string>
    <string name="view_exclude_folders">查看排除目录</string>
    <string name="view_mode">视图模式</string>
    <string name="view_mode_month">月视图</string>
    <string name="view_mode_week">周视图</string>
    <string name="yesterday">昨天</string>
    <string name="not_ready">未准备好</string>
    <string name="action_confirm">操作确认</string>
    <string name="confirm_to_remove_d_files_from_s_and_remove_d_files_from_s">确认操作将从 %1$s 中移除 %2$d 个文件，并从 %3$s 中移除 %4$s 个文件。</string>
    <string name="keep">保留</string>
    <string name="folder_list_empty_text">空空如也</string>
    <string name="next">下一步</string>
    <string name="wait_for_a_moment_previous_operation_is_going">请等待，长一个操作正在进行！</string>
    <string name="cannot_share_file">不能分享文件</string>

</resources>
