<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:menuCategory="container"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/item_grid_view"
            android:title="@string/grid_view"
            android:icon="@drawable/ic_grid_on_black_24px"
            android:orderInCategory="0"
            android:checkable="true"
            app:showAsAction="always"
            >

        </item>
        <item
            android:id="@+id/item_list_view"
            android:checkable="true"
            android:icon="@drawable/ic_view_list_black_24px"
            app:showAsAction="always"
            android:title="@string/list_view"
            />
    </group>

    <group android:id="@+id/sort_way"
           android:checkableBehavior="single"
        >

        <item android:id="@+id/sort_by_date"
              android:checkable="true"
              android:title="@string/sort_by_date"
            />
        <item android:id="@+id/sort_by_name"
              android:checkable="true"
              android:title="@string/sort_by_name"
            />
    </group>

    <group android:id="@+id/sort_order"
           android:checkableBehavior="single"
        >

        <item android:id="@+id/order_by_asc"
              android:checkable="true"
              android:title="@string/order_by_asc"
            />
        <item android:id="@+id/order_by_desc"
              android:checkable="true"
              android:title="@string/order_by_desc"
            />
    </group>

</menu>