<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_recent"
        android:title="@string/recent_history"
        android:icon="@drawable/ic_history_black_24px"
        android:orderInCategory="0"
        app:showAsAction="always"
        >

    </item>

    <item
        android:id="@+id/app_bar_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/search"
        />
    <item
        android:id="@+id/app_bar_view_mode"
        android:title="@string/view_mode"
        android:icon="@drawable/ic_grid_on_black_24px"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/app_bar_setting"
        android:title="@string/setting"
        />
</menu>