<!--标题-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/dialog_standard_content_margin"
    android:paddingRight="@dimen/dialog_standard_content_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/title"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dialog_title"
        android:textStyle="bold"
        android:layout_gravity="center_vertical"
        />


    <Button
        android:id="@+id/btn_negative"
        android:visibility="gone"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="8dp"
        android:layout_weight="0"
        android:text="@string/create_folder"
        />
    <Button
        android:id="@+id/btn_positive"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="8dp"
        android:layout_weight="0"
        android:text="@string/move_file"
        tools:textColor="@color/warning"
        tools:text="@android:string/ok"
        />
</LinearLayout>