<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:background="@color/black"
    tools:context="cn.intret.app.picgo.ui.main.ImageActivity">


    <!--Pager-->
    <FrameLayout
        android:id="@+id/pager_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <cn.intret.app.picgo.view.HackyViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
        </cn.intret.app.picgo.view.HackyViewPager>

    </FrameLayout>

    <!--工具按钮-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_tool_bar_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <!--brief-->
        <TextView
            android:id="@+id/index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_standard_content_margin"
            android:lines="1"
            android:textColor="@android:color/white"

            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1/23"/>

        <!--resolution-->
        <TextView
            android:id="@+id/resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="8dp"
            android:background="@color/translucent"
            android:textColor="@android:color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/index"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="128x111"
            />

        <!--工具按钮-->
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/btn_delete"
                style="@style/ImageViewerToolbarButton"
                android:contentDescription="Delete Button"
                android:src="@drawable/ic_delete_white"/>

            <ImageView
                android:id="@+id/btn_share"
                style="@style/ImageViewerToolbarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Share Button"
                android:src="@drawable/ic_share_white_24px"

                />

            <ImageView
                android:id="@+id/btn_detail"
                style="@style/ImageViewerToolbarButton"
                android:contentDescription="Detail Button"
                android:src="@drawable/ic_info_white"
                />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <!--详细信息-->
    <RelativeLayout
        android:id="@+id/detail_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="gone">

        <!--模糊图层-->
        <ImageView
            android:id="@+id/blur_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="Blur Layout"
            android:foreground="@color/translucent"
            android:visibility="visible"
            tools:visibility="visible"
            >
        </ImageView>

        <!--遮罩图层-->
        <View
            android:id="@+id/mask_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@android:color/black"
            >
        </View>

        <!--详细信息-->
        <LinearLayout
            android:id="@+id/file_detail_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:visibility="visible"
            tools:visibility="visible">

            <GridLayout
                android:id="@+id/grid_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dialog_standard_content_margin"
                android:layout_marginRight="@dimen/dialog_standard_content_margin"
                android:columnCount="5"
                android:rowCount="5"
                tools:ignore="UselessParent">

                <!-- 文件路径 -->
                <TextView
                    android:id="@+id/title_file_path"
                    style="@style/ImageDetailTextBase.Title.Cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_row="0"
                    android:gravity="right"
                    android:text="@string/file_path_"
                    />

                <TextView
                    android:id="@+id/value_file_path"
                    style="@style/ImageDetailTextBase.Value.Cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_columnSpan="3"
                    android:layout_row="0"
                    android:maxLines="3"
                    tools:text="@string/tools_file_path"/>

                <!-- 分辨率 -->
                <TextView
                    android:id="@+id/title_resolution"
                    style="@style/ImageDetailTextBase.Title.Cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_row="1"
                    android:text="@string/resolution_"
                    />

                <TextView
                    android:id="@+id/value_resolution"
                    style="@style/ImageDetailTextBase.Value.Cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_columnSpan="3"
                    android:layout_row="1"
                    tools:text="@string/tools_image_resolution"/>

                <!--大小-->
                <TextView
                    android:id="@+id/title_file_size"
                    style="@style/ImageDetailTextBase.Title.Cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_row="2"
                    android:text="@string/image_size_"
                    />

                <TextView
                    android:id="@+id/value_file_size"
                    style="@style/ImageDetailTextBase.Value.Cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_columnSpan="3"
                    android:layout_row="2"
                    tools:text="@string/tools_image_file_size"/>


                <!--时间-->
                <TextView
                    android:id="@+id/title_capture_time"
                    style="@style/ImageDetailTextBase.Title.Cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_row="3"
                    android:text="@string/capture_time"
                    />

                <TextView
                    android:id="@+id/value_capture_time"
                    style="@style/ImageDetailTextBase.Value.Cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_columnSpan="3"
                    android:layout_row="3"
                    tools:text="17/9/9 12:11"/>

            </GridLayout>
        </LinearLayout>

    </RelativeLayout>

    <!--https://stackoverflow.com/questions/26969424/how-to-set-toolbar-text-and-back-arrow-color-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        android:navigationIcon="@drawable/ic_arrow_back_white_24px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextAppearance="@style/ActionBarTitleText"
        >

    </android.support.v7.widget.Toolbar>
</android.support.constraint.ConstraintLayout>
