<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main"
    >

    <!--内容-->
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:visibility="visible"
            >

            <!--视图模式-->
            <RadioGroup
                android:id="@+id/view_mode"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:checkedButton="@+id/btn_default"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1">

                <RadioButton
                    android:id="@+id/btn_default"
                    style="@style/ViewModeButton"
                    android:checked="true"
                    android:drawableLeft="@drawable/selector_view_mode_default"
                    android:text="@string/mode_default"
                    />

                <RadioButton
                    android:id="@+id/btn_week"
                    style="@style/ViewModeButton"
                    android:drawableLeft="@drawable/selector_view_mode_week"
                    android:text="@string/view_mode_week"
                    />

                <RadioButton
                    android:id="@+id/btn_month"
                    style="@style/ViewModeButton"
                    android:drawableLeft="@drawable/selector_view_mode_month"
                    android:text="@string/view_mode_month"
                    />

            </RadioGroup>

            <!--图片列表-->
            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/refresh"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/image_tool_bar"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_mode"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1"
                >
                <cn.intret.app.picgo.widget.SuperRecyclerView
                    android:id="@+id/img_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:padding="4dp"
                    android:scrollbarStyle="outsideOverlay"
                    android:scrollbars="vertical"
                    app:dsrv_autoScrollEnabled="true"
                    app:dsrv_autoScrollHotspotHeight="56dp"
                    tools:listitem="@layout/image_list_item">

                </cn.intret.app.picgo.widget.SuperRecyclerView>

            </android.support.v4.widget.SwipeRefreshLayout>

            <ImageView
                android:id="@+id/empty_view"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_little_ghost_scare"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <!--选中文件操作工具栏-->
            <android.support.v7.widget.Toolbar
                android:id="@+id/floatingToolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@android:color/white"
                android:visibility="gone"
                android:elevation="1dp"
                app:floatingMenu="@menu/image_action_menu"
                app:layout_constraintTop_toTopOf="@id/refresh"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <include
                android:id="@+id/image_tool_bar"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                layout="@layout/image_toolbar"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/drawer"/>
</android.support.v4.widget.DrawerLayout>
